Bug 1199487 - New Content Services landing page for dmexco

--- a/media/css/mozorg/contentservices.less
+++ b/media/css/mozorg/contentservices.less
@@ -155,6 +155,35 @@ ul.links {
     }
 }
 
+/* demxco 2015 */
+
+.content-services-dmexco {
+
+    section {
+        img {
+            margin: @gridGutterWidth auto;
+            width: auto;
+        }
+    }
+
+    .location {
+        margin-bottom: @gridGutterWidth;
+        display: block;
+
+        span {
+            display: block;
+        } 
+    }
+
+    .sub-event {
+        margin-bottom: @gridGutterWidth;
+
+        p {
+            margin: 0;
+        }
+    }
+}
+
 /* Tablet Layout: 760px */
 @media only screen and (min-width: @breakTablet) and (max-width: @breakDesktop) {
     #masthead,
