Bug 1199622 Update PDF links for content services

--- a/bedrock/mozorg/templates/mozorg/contentservices/faq.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/faq.html
@@ -65,8 +65,8 @@
       <p>
         {{ _('A Tile is a visual bookmark that consists of one or two images: a required “static state” image and an optional (but recommended) “rollover state.”') }}
         {{ _('These are 580 x 360-pixel image files.') }}
-        {% trans url='http://static.mozilla.com/moco/en-US/pdf/Partner_Specs_Directory_Tiles.pdf', url2='http://static.mozilla.com/moco/en-US/pdf/Partner_Specs_Suggested_Tiles.pdf' %}
-          Download our creative guidelines for <a href="{{ url }}">Directory Tiles</a> or <a href="{{ url2 }}">Suggested Tiles</a> for more details.
+        {% trans url='http://static.mozilla.com/moco/en-US/pdf/Creative_Specs_for_Directory_Suggested_Tiles.pdf' %}
+          Download our creative guidelines for <a href="{{ url }}">Directory Tiles and Suggested Tiles</a> for more details.
         {% endtrans %}
       </p>
     </div>
