--- a/bedrock/mozorg/templates/mozorg/contentservices/start.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/start.html
@@ -25,8 +25,8 @@
     Please review our <a href="{{ url }}">Frequently Asked Questions</a> page.
   {% endtrans %}
   {{ _('We also have a set of creative guidelines, which cover everything you need to know to build your own Tile.') }}
-  {% trans url='http://static.mozilla.com/moco/en-US/pdf/Partner_Specs_Directory_Tiles.pdf', url2='http://static.mozilla.com/moco/en-US/pdf/Partner_Specs_Suggested_Tiles.pdf' %}
-    Download for <a href="{{ url }}">Directory Tiles</a> or <a href="{{ url2 }}">Suggested Tiles</a>.
+  {% trans url='http://static.mozilla.com/moco/en-US/pdf/Creative_Specs_for_Directory_Suggested_Tiles.pdf' %}
+    Download our creative guidelines for <a href="{{ url }}">Directory Tiles and Suggested Tiles</a>.
   {% endtrans %}
   </p>
   <p>
