Fix Bug 1199916 - Make image helpers always work without img prefix

--- a/bedrock/firefox/templates/firefox/australis/fx36/firstrun-tour.html
+++ b/bedrock/firefox/templates/firefox/australis/fx36/firstrun-tour.html
@@ -57,7 +57,7 @@ data-step4="{{ _('4/4') }}"
       <h2>{{ _('Get to know Hello') }}</h2>
       <p>{{ _('Firefox Hello is the easiest way to connect with friends and family for free over video.') }}</p>
       <a id="learn-more" href="{{ url('firefox.hello') }}" class="button-flat">{{ _('Learn more') }}</a>
-      <p id="powered-by">{{ _('Powered by %s')|format(high_res_img('img/firefox/hello/tef-logo.png', {'alt': 'Telefonica', 'width': '106', 'height': '29'})) }}</p>
+      <p id="powered-by">{{ _('Powered by %s')|format(high_res_img('firefox/hello/tef-logo.png', {'alt': 'Telefonica', 'width': '106', 'height': '29'})) }}</p>
     </div>
     <div class="promo-media">
       {% include 'firefox/includes/hello-animation.html' %}
@@ -98,7 +98,7 @@ data-step4="{{ _('4/4') }}"
                 <li><a href="#" role="button" class="more">{{ _('Connect with anyone over video right from Firefox') }}</a></li>
               </ul>
             </div>
-            {{ high_res_img('img/firefox/australis/diag-menu-bar.jpg', {'alt': _('The features you use most, all in one place'), 'width': '300', 'height': '188'}) }}
+            {{ high_res_img('firefox/australis/diag-menu-bar.jpg', {'alt': _('The features you use most, all in one place'), 'width': '300', 'height': '188'}) }}
           </li>
           <li class="tour-step" data-step="2" data-tip-prev="{{ _('<span>Previous:</span> Menu') }}" data-tip-next="{{ _('<span>Next:</span> Search') }}">
             <div class="tour-item">
@@ -111,7 +111,7 @@ data-step4="{{ _('4/4') }}"
                 <li><a href="#" role="button" class="more">{{ _('Choose how you want to search') }}</a></li>
               </ul>
             </div>
-            {{ high_res_img('img/firefox/australis/hello-1.png', {'alt': _('Connect with anyone over video right from Firefox'), 'width': '240', 'height': '178', 'id': 'hello-img-1'}) }}
+            {{ high_res_img('firefox/australis/hello-1.png', {'alt': _('Connect with anyone over video right from Firefox'), 'width': '240', 'height': '178', 'id': 'hello-img-1'}) }}
           </li>
           <li class="tour-step" data-step="3" data-tip-prev="{{ _('<span>Previous:</span> Firefox Hello') }}" data-tip-next="{{ _('<span>Next:</span> Bookmarks') }}">
             <div class="tour-item">
@@ -125,7 +125,7 @@ data-step4="{{ _('4/4') }}"
                 <li><a href="#" role="button" class="more">{{ _('Use the star to create bookmarks') }}</a></li>
               </ul>
             </div>
-            {{ high_res_img('img/firefox/australis/diag-search.jpg', {'alt': _('Search suggestions appear as you type'), 'width': '300', 'height': '188'}) }}
+            {{ high_res_img('firefox/australis/diag-search.jpg', {'alt': _('Search suggestions appear as you type'), 'width': '300', 'height': '188'}) }}
           </li>
           <li class="tour-step" data-step="4" data-tip-prev="{{ _('<span>Previous:</span> Search') }}">
             <div class="tour-item">
@@ -138,7 +138,7 @@ data-step4="{{ _('4/4') }}"
                 <li>{{ _('Save sites with a single click') }}</li>
               </ul>
             </div>
-            {{ high_res_img('img/firefox/australis/diag-bookmarks.jpg', {'alt': _('Use the star to create bookmarks'), 'width': '300', 'height': '188'}) }}
+            {{ high_res_img('firefox/australis/diag-bookmarks.jpg', {'alt': _('Use the star to create bookmarks'), 'width': '300', 'height': '188'}) }}
           </li>
         </ul>
         <div class="compact-title"></div>
