--- a/bedrock/firefox/templates/firefox/australis/fx36/whatsnew-tour.html
+++ b/bedrock/firefox/templates/firefox/australis/fx36/whatsnew-tour.html
@@ -52,7 +52,7 @@ data-has-tour="True"
   <article class="promo whatsnew">
     <div class="promo-copy">
       <a id="learn-more" href="{{ url('firefox.hello') }}" class="button-flat">{{ _('Learn more') }}</a>
-      <p id="powered-by">{{ _('Powered by %s')|format(high_res_img('img/firefox/hello/tef-logo.png', {'alt': 'Telefonica', 'width': '106', 'height': '29'})) }}</p>
+      <p id="powered-by">{{ _('Powered by %s')|format(high_res_img('firefox/hello/tef-logo.png', {'alt': 'Telefonica', 'width': '106', 'height': '29'})) }}</p>
     </div>
     <div class="promo-media">
       {% include 'firefox/includes/hello-animation.html' %}
@@ -96,7 +96,7 @@ data-has-tour="True"
               <div class="hello-added-door-hanger" data-title="{{ _('Perfect!') }}" data-text="{{ _('Now using Hello will be even easier. To move or remove the icon, just open the menu and select Customize.') }}" data-try="{{ _('Try it now') }}"></div>
               <div class="hello-later-door-hanger" data-title="{{ _('Want to add it later?') }}" data-text="{{ _('No problem. Just open this menu, select Customize and simply drag the Hello icon into your toolbar.') }}"></div>
             </div>
-            {{ high_res_img('img/firefox/australis/hello-1.png', {'alt': '', 'width': '240', 'height': '178', 'id': 'hello-img-1'}) }}
+            {{ high_res_img('firefox/australis/hello-1.png', {'alt': '', 'width': '240', 'height': '178', 'id': 'hello-img-1'}) }}
           </li>
           <li class="tour-step" data-step="2" data-tip-prev="{{ _('<span>Previous:</span> Firefox Hello') }}">
             <div class="tour-item">
@@ -110,7 +110,7 @@ data-has-tour="True"
               </ul>
               <div class="hello-reminder-door-hanger step-target" data-title="{{ _('Here when you need it') }}" data-text="{{ _('Start and join conversations right from your toolbar.') }}"></div>
             </div>
-            {{ high_res_img('img/firefox/australis/hello-2.png', {'alt': '', 'width': '240', 'height': '178', 'id': 'hello-img-2'}) }}
+            {{ high_res_img('firefox/australis/hello-2.png', {'alt': '', 'width': '240', 'height': '178', 'id': 'hello-img-2'}) }}
           </li>
         </ul>
         <div class="compact-title"></div>
