--- a/bedrock/firefox/templates/firefox/hello/index.html
+++ b/bedrock/firefox/templates/firefox/hello/index.html
@@ -134,7 +134,7 @@ data-try-now="{{ _('Try it now') }}"
       <button class="try-hello" id="try-hello-intro">{{ _('Try Firefox Hello') }}</button>
 
       <aside id="powered-by">
-        {{ _('Powered by %s')|format(high_res_img('img/firefox/hello/tef-logo.png', {'alt': 'Telefonica', 'width': '106', 'height': '29'})) }}
+        {{ _('Powered by %s')|format(high_res_img('firefox/hello/tef-logo.png', {'alt': 'Telefonica', 'width': '106', 'height': '29'})) }}
       </aside>
 
       {{ share_cta(_('Share'), share_urls, _('Meet Firefox Hello, the easiest way to connect for free over video with anyone, anywhere.'), 'spread-hello', 'sky mini') }}
