--- a/bedrock/firefox/templates/firefox/tiles.html
+++ b/bedrock/firefox/templates/firefox/tiles.html
@@ -54,7 +54,7 @@
   </p>
   <ol>
     <li>{{ _('Drag a site to exactly where you want it.') }}
-      {{ high_res_img('img/firefox/tiles/drag-site.png', {'alt': ''}) }}
+      {{ high_res_img('firefox/tiles/drag-site.png', {'alt': ''}) }}
     </li>
     <li>{{ _('Once you’ve found the perfect spot for your site, pin it to make it stay.') }}
       <img src="{{ static('img/firefox/tiles/pin-site.png') }}" alt="">
@@ -91,7 +91,7 @@
     {{ _('If you’re using Firefox for the first time, the New Tab page is already populated with useful and interesting sites and content.') }}
     {{ _('This includes both referrals to sponsored sites from commercial partners, labeled as “Sponsored,” and content we consider important to our mission of advancing the public benefit of the Internet.') }}
   </p>
-  {{ high_res_img('img/firefox/tiles/discover-sites.png', {'alt': ''}) }}
+  {{ high_res_img('firefox/tiles/discover-sites.png', {'alt': ''}) }}
 </section>
 
 <section class="tls-privacy">
@@ -117,7 +117,7 @@
 #}
 
 {% block dashboard_sidebar_contents %}
-  {{ high_res_img('img/firefox/tiles/new-tab-enhanced.png', {'alt': _('Screenshot of the Firefox New Tab page'), 'class': 'tab'}) }}
+  {{ high_res_img('firefox/tiles/new-tab-enhanced.png', {'alt': _('Screenshot of the Firefox New Tab page'), 'class': 'tab'}) }}
   <img class="tab-preferences" src="{{ static('img/firefox/tiles/tab-preferences.png') }}" alt="{{ _('Screenshot of New Tab preferences') }}">
 {% endblock %}
 
