--- a/bedrock/firefox/templates/firefox/australis/fx40/firstrun.html
+++ b/bedrock/firefox/templates/firefox/australis/fx40/firstrun.html
@@ -50,7 +50,7 @@
 <section id="intro" data-fxa-iframe-src="{{ settings.FXA_IFRAME_SRC }}">
   <div class="container">
     <div id="logo">
-      {{ high_res_img('img/firefox/australis/fx38.0.5/firefox-logo.png', {'alt': 'Firefox', 'width': '142', 'height': '147'}) }}
+      {{ high_res_img('firefox/australis/fx38.0.5/firefox-logo.png', {'alt': 'Firefox', 'width': '142', 'height': '147'}) }}
     </div>
 
     <div class="leftcol">
