--- a/bedrock/firefox/templates/firefox/new2.html
+++ b/bedrock/firefox/templates/firefox/new2.html
@@ -31,7 +31,7 @@
 
 {% block site_header_nav %}{% endblock %}
 {% block site_header_logo %}
-  <h2>{{ high_res_img('img/firefox/new/header-firefox.png', {'alt': _('Firefox for desktop'), 'width': '223', 'height': '84'}) }}</h2>
+  <h2>{{ high_res_img('firefox/new/header-firefox.png', {'alt': _('Firefox for desktop'), 'width': '223', 'height': '84'}) }}</h2>
 {% endblock %}
 
 {# all CSS must be in extrahead block for old IE #}
@@ -160,7 +160,7 @@
       </div>
 
       <div class="desktop" id="firefox-screenshot">
-        {{ platform_img('img/firefox/new/2/browser.png', {'alt': _('Firefox screenshot'), 'high-res': True}) }}
+        {{ platform_img('firefox/new/2/browser.png', {'alt': _('Firefox screenshot'), 'high-res': True}) }}
       </div>
 
       <div id="newsletter-latest">
