--- a/bedrock/firefox/templates/firefox/organizations/organizations.html
+++ b/bedrock/firefox/templates/firefox/organizations/organizations.html
@@ -26,7 +26,7 @@
 {% block main_feature %}
 <hgroup id="main-feature" class="stacked">
   <h1>{{ _('Mozilla Firefox <span class="%s">Extended Support Release</span>')|format('large') }}</h1>
-  <h4>{{ _('A community-led project that allows organizations to benefit from the speed, flexibility and security of Firefox while getting the support they need.') }}</h4>
+  <p class="large">{{ _('A community-led project that allows organizations to benefit from the speed, flexibility and security of Firefox while getting the support they need.') }}</p>
 </hgroup>
 {% endblock %}
 
