Fix bug 1198773 - add Kaykas-Wolff to steering committee

--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -101,6 +101,20 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/jascha-kaykas-wolff/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/jascha-kaykas-wolff.jpg') }}">
+          <span class="fn" itemprop="name">Jascha Kaykas-Wolff</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('Chief Marketing Officer') }}</span>
+        <span class="note">{{ _('Steering Committee') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url twitter" itemprop="url" href="https://twitter.com/kaykas">@kaykas</a></li>
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/kaykas/">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/mark-mayo/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/mark-mayo.jpg') }}">
           <span class="fn" itemprop="name">Mark Mayo</span>
@@ -152,19 +166,6 @@
           <li><a class="url twitter" itemprop="url" href="https://twitter.com/dherman76">@dherman76</a></li>
           <li><a class="url website" itemprop="url" href="http://www.darrenherman.com">darrenherman.com</a></li>
           <li><a class="url book" itemprop="url" href="https://mozillians.org/u/daherman/">{{ _('Mozillians profile') }}</a></li>
-        </ul>
-      </li>
-
-      <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/jascha-kaykas-wolff/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/jascha-kaykas-wolff.jpg') }}">
-          <span class="fn" itemprop="name">Jascha Kaykas-Wolff</span>
-        </a>
-        <span class="title" itemprop="jobTitle">{{ _('Chief Marketing Officer') }}</span>
-
-        <ul class="elsewhere">
-          <li><a class="url twitter" itemprop="url" href="https://twitter.com/kaykas">@kaykas</a></li>
-          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/kaykas/">{{ _('Mozillians profile') }}</a></li>
         </ul>
       </li>
 
