--- a/bedrock/mozorg/templates/mozorg/mpl/2.0/permissive-code-into-mpl.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/2.0/permissive-code-into-mpl.html
@@ -19,7 +19,7 @@
   <h1>Copying permissively-Licensed Code into an MPL 2 File: Guidelines for Developers</h1>
 
   <section>
-    <p>This document explains what to do when you want to copy a piece of code which is licensed under the BSD, MIT, Apache License 2 or another standard permissive open source licence into an existing Mozilla project file which is licensed under the <a href="{{ url('mozorg.MPL.2.0.index') }}">MPL 2</a>.</p>
+    <p>This document explains what to do when you want to copy a piece of code which is licensed under the BSD, MIT, Apache License 2 or another standard permissive open source licence into an existing Mozilla project file which is licensed under the <a href="{{ url('mozorg.mpl.2.0.index') }}">MPL 2</a>.</p>
     <p>This document is specifically about copying code between files with different licenses which are already part of our codebase. Imports of new third party codebases (e.g. new libraries) is a different matter; such imports need to be checked over by the licensing team.</p>
     <p>If you need to copy code the other way - MPL 2 code into a permissively-licensed file - then consult the <a href="mailto:licensing@mozilla.org">licensing team</a>.</p>
     <p>To copy permissively-licensed code into an MPL 2 file, you have three options - Avoid, Relicense and Boilerplate.</p>
