--- a/bedrock/mozorg/templates/mozorg/mpl/historical.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/historical.html
@@ -16,14 +16,14 @@
 
 <div id="main-content">
     <h1>Historical Licensing Documents</h1>
-    
+
     <section>
         <p>These files are made available for historical and reference purposes only, and should not be used to license software.</p>
         <dl>
-            <dt><a href="{{ url('mozorg.MPL.1.1.index') }}">Mozilla Public License, version 1.1</a></dt>
+            <dt><a href="{{ url('mozorg.mpl.1.1.index') }}">Mozilla Public License, version 1.1</a></dt>
             <dd>This is the Mozilla Public License, version 1.1. It is also available in <a href="index.txt">plain text</a>. MPL 1.1 is obsoleted by MPL 2.0, and Mozilla strongly recommends against using this license for new code.</dd>
 
-            <dt><a href="{{ url('mozorg.MPL.1.1.FAQ') }}">MPL version 1.1 FAQ</a></dt>
+            <dt><a href="{{ url('mozorg.mpl.1.1.faq') }}">MPL version 1.1 FAQ</a></dt>
             <dd>This is the FAQ for MPL 1.1. Because MPL 1.1 has been replaced by MPL 2.0, this FAQ should be used for historical reference purposes only.</dd>
 
             <dt><a href="NPL/1.1/">Netscape Public License, version 1.1</a></dt>
