--- a/bedrock/mozorg/templates/mozorg/mpl/2.0/combining-mpl-and-gpl.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/2.0/combining-mpl-and-gpl.html
@@ -19,14 +19,14 @@
 
   <section>
     <h2 id="introduction">Introduction</h2>
-    <p>When someone combines a file or files licensed under the <a href="{{ url('mozorg.MPL.2.0.index') }}">Mozilla Public License, version 2.0 ("MPL")</a> with a project licensed under the GNU General Public License or Lesser General Public Licenses ("(L)GPL"), the MPL's <a href="{{ url('mozorg.MPL.2.0.index') }}#distribution-of-a-larger-work">Section 3.3</a> allows distribution of the combined work (the "Larger Work") subject to the terms of both licenses, as long as certain conditions are met.</p>
+    <p>When someone combines a file or files licensed under the <a href="{{ url('mozorg.mpl.2.0.index') }}">Mozilla Public License, version 2.0 ("MPL")</a> with a project licensed under the GNU General Public License or Lesser General Public Licenses ("(L)GPL"), the MPL's <a href="{{ url('mozorg.mpl.2.0.index') }}#distribution-of-a-larger-work">Section 3.3</a> allows distribution of the combined work (the "Larger Work") subject to the terms of both licenses, as long as certain conditions are met.</p>
     <p>This document is intended to help developers take advantage of this provision, while still complying with the MPL and (L)GPL and respecting the intent of upstream developers.</p>
-    
+
     <h2 id="initial-distribution-of-mpl-licensed-files-as-part-of-an-lgpl-licensed-project">Initial Distribution of MPL-licensed Files As Part Of an (L)GPL-licensed Project</h2>
     <p>When a developer combines MPL-licensed files into an (L)GPL-licensed project for initial distribution under both MPL and (L)GPL, the MPL-licensed files may be redistributed under one of three different circumstances: they may be unmodified; they may be unmodified, but policy requires or the developer prefers to add an (L)GPL header; or they may be modified.</p>
     <h3 id="unmodified-mpl-licensed-files-mpl-only">Unmodified MPL-licensed Files - MPL-only</h3>
-    <p>In the simplest case, the developer combines unmodified MPL-licensed files into a project with (L)GPL-licensed files to create a Larger Work, and seeks to distribute the resulting combination under the terms of the (L)GPL.</p> 
-    <p>In this case, Section 3.3 of the MPL permits the individual files to be distributed as part of the Larger Work, with no further changes required. The developer may simply leave the file untouched, with all notices intact. The top of the incorporated file would continue to look like <a href="{{ url('mozorg.MPL.2.0.index') }}#exhibit-a---source-code-form-license-notice"> Exhibit A</a> of the MPL:</p> 
+    <p>In the simplest case, the developer combines unmodified MPL-licensed files into a project with (L)GPL-licensed files to create a Larger Work, and seeks to distribute the resulting combination under the terms of the (L)GPL.</p>
+    <p>In this case, Section 3.3 of the MPL permits the individual files to be distributed as part of the Larger Work, with no further changes required. The developer may simply leave the file untouched, with all notices intact. The top of the incorporated file would continue to look like <a href="{{ url('mozorg.mpl.2.0.index') }}#exhibit-a---source-code-form-license-notice"> Exhibit A</a> of the MPL:</p>
 <pre>
 This Source Code Form is subject to the terms of the Mozilla Public
 License, v. 2.0. If a copy of the MPL was not distributed with this file,
@@ -115,6 +115,6 @@ Copyright (c) 20XX, MPL and (L)GPL Contributor2 contrib2@example.net
     <h2 id="a-note-on-the-lgpl">A Note On the LGPL</h2>
     <p>Note that, while this article uses (L)GPL throughout, no special license changes are necessary when an MPL-licensed application links against an LGPL-licensed library. In the case of the LGPL, the licensing and notice requirements discussed above apply only when MPL-licensed files are to be included directly in the library itself.</p>
     <p><small>This work is based on "<a href="https://www.softwarefreedom.org/resources/2007/gpl-non-gpl-collaboration.html">Maintaining Permissive-Licensed Files in a GPL-Licensed Project: Guidelines for Developers</a>", authored by the SFLC, to whom we are very grateful. Both that work and this work are available under <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>.</small></p>
-  </section>      
+  </section>
 </div>
 {% endblock %}
