--- a/bedrock/mozorg/templates/mozorg/mpl/2.0/revision-faq.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/2.0/revision-faq.html
@@ -22,7 +22,7 @@
         <p>MPL 2.0 was drafted over a period of 21 months in a public process that included extensive feedback from a variety of people, including MPL users, lawyers, and open source community groups like the Free Software Foundation and Open Source Initiative.</p>
 
         <h3 id="publicly-documented">2. Is the revision process publicly documented?</h3>
-        <p>Historical documents about the revision process are available from <a href="{{ url('mozorg.MPL.index') }}">this website</a>.</p>
+        <p>Historical documents about the revision process are available from <a href="{{ url('mozorg.mpl.index') }}">this website</a>.</p>
 
         <h3 id="who-can-update">3. Section 6 of MPL 1.1 says Netscape can update the license, but Mozilla isn't Netscape. Can Mozilla still update the license?</h3>
         <p>As part of the creation of the Mozilla Foundation, Netscape assigned
@@ -57,7 +57,7 @@
         2.0?</h3>
         <p>The primary change is simplification. For example, rather than exactly specifying the amount of time source code must be available, the source code must simply be made available when the executable is made available. License headers have been made shorter, and notification requirements have been simplified. Overall, the license is substantially shorter and should be easier to understand.</p>
         <p>In addition, a handful of new features have been added to the license. For example, the license is now compatible with the Apache license - anyone who complies with the terms of the MPL should also be compliant with the Apache license's terms. Similarly, by default, the license allows the code to be distributed alongside code licensed under the GPL or LGPL. In addition, patent protections have been brought more in line with what other licenses (such as Apache) use, while also allowing any member of a community to defend a contributor who has been sued for infringement.</p>
-        <p>A <a href="{{ url('mozorg.MPL.2.0.differences') }}">word-by-word redline of all changes</a> is also available for those seeking to analyze the changes in more detail. Note, however, that the changes are extensive, and you may find that simply reading the <a href="./">new license itself</a> will provide a clearer understanding of its contents.</p>
+        <p>A <a href="{{ url('mozorg.mpl.2.0.differences') }}">word-by-word redline of all changes</a> is also available for those seeking to analyze the changes in more detail. Note, however, that the changes are extensive, and you may find that simply reading the <a href="./">new license itself</a> will provide a clearer understanding of its contents.</p>
 
         <h3 id="government-entities-removal">9. Why did the new license remove the government entities language?</h3>
         <p>Software licensed under the MPL is a commercial item as defined in 48 C.F.R. 2.101, unless it was originally written at the direction, and for the use, of the US government. As a result, removing the language from the license simplifies the license without changing the rights and responsibilities that US Government users have towards MPL-licensed code.</p>
