--- a/bedrock/mozorg/templates/mozorg/mpl/licence-policy.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/licence-policy.html
@@ -25,15 +25,15 @@
     <p>The following is a brief summary of the Mozilla license policy:</p>
     <ul>
         <li>New files in, or modifications to, an existing, consistently-licensed area of code should be under the same license as the existing code.</li>
-        <li>New projects should be under the <a href="{{ url('mozorg.MPL.2.0.index') }}">MPL 2.0</a> or <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a> - see below for guidance on choosing which.</li>
+        <li>New projects should be under the <a href="{{ url('mozorg.mpl.2.0.index') }}">MPL 2.0</a> or <a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache 2.0</a> - see below for guidance on choosing which.</li>
         <li>You must consult <a href='#Filing_Bugs'>the licensing team</a> before importing third-party code which is not under the MPL or Apache 2.0.</li>
     </ul>
   </section>
 
   <section>
     <h2 id="Types_of_Code">Types of Code</h2>
-    <p><b>Mozilla Code</b> is code in Mozilla Repositories which originated with the Mozilla Project. Code which is not Mozilla Code is <b>Third Party Code</b>.</p> 
-    <p><b>Product Code</b> means all files any part of which is included in nightly binaries of the Mozilla family of Internet clients - Firefox, Thunderbird, SeaMonkey and Camino - plus the Gecko parts of Boot2Gecko. Note that this definition excludes the code of tools used merely to build these products, such as system libraries.</p> 
+    <p><b>Mozilla Code</b> is code in Mozilla Repositories which originated with the Mozilla Project. Code which is not Mozilla Code is <b>Third Party Code</b>.</p>
+    <p><b>Product Code</b> means all files any part of which is included in nightly binaries of the Mozilla family of Internet clients - Firefox, Thunderbird, SeaMonkey and Camino - plus the Gecko parts of Boot2Gecko. Note that this definition excludes the code of tools used merely to build these products, such as system libraries.</p>
     <p><b>Test Code</b> means test cases for automated test frameworks (but not the frameworks themselves).</p>
   </section>
 
@@ -47,7 +47,7 @@
 Any copyright is dedicated to the Public Domain.
 http://creativecommons.org/publicdomain/zero/1.0/
 </pre>
-    </blockquote> 
+    </blockquote>
     <p>Note that, for historical reasons, some trivial Support Code, such as <a href="https://developer.mozilla.org/Project:Copyrights">old code samples in developer.mozilla.org</a>, may be under the MIT license.</p> <p><b>PD Test Code</b> is Test Code which is Mozilla Code, which does not carry an explicit license header, and which was either committed to the Mozilla repository on or after 23rd September 2014, or was committed before that date but all contributors up to that date were Mozilla employees, contractors or interns. PD Test Code is made available under the <a href="http://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Public Domain Dedication</a>. Test Code which has not been demonstrated to be PD Test Code should be considered to be under the MPL 2.</p>
   </section>
 
@@ -67,7 +67,7 @@ http://creativecommons.org/publicdomain/zero/1.0/
     <h3 id="Filing_Bugs">Filing Licensing Bugs</h3>
     <p>If you need to make a request of, or seek information from, the licensing team, please file a bug <a href="https://bugzilla.mozilla.org/enter_bug.cgi?bug_severity=normal&bug_status=NEW&component=Licensing&op_sys=All&product=mozilla.org&rep_platform=All">in Bugzilla</a>.</p>
     <h3 id="Using_the_MPL">Using the MPL</h3>
-    <p>To apply the MPL to new source files, please don't copy boilerplate from existing files - instead, use the appropriate <a href="{{ url('mozorg.MPL.headers.index') }}">boilerplate license notice</a>.</p>
+    <p>To apply the MPL to new source files, please don't copy boilerplate from existing files - instead, use the appropriate <a href="{{ url('mozorg.mpl.headers.index') }}">boilerplate license notice</a>.</p>
     <h3 id="Licenses_Compatible_with_the_MPL">Licenses Compatible with the MPL</h3>
     <p>The following licenses are compatible with the Mozilla Public License, version 2.0, in the sense that code under them can be included in the same binary:</p>
     <ul>
