Fix Bug 1201196, fix broken link to text file for MPL 1.1

--- a/bedrock/mozorg/templates/mozorg/mpl/1.1/index.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/1.1/index.html
@@ -15,7 +15,7 @@
  </style>
 </head>
 <body>
- <p><small>(<a href="index.txt">Plain text version</a>)</small></p>
+ <p><small>(<a href="{{ static('MPL/1.1/index.txt') }}">Plain text version</a>)</small></p>
  <h1>Mozilla Public License Version 1.1</h1>
  <h2 id="section-1">1. Definitions.</h2>
  <dl>
