--- a/bedrock/mozorg/templates/mozorg/mpl/index.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/index.html
@@ -20,7 +20,7 @@
     <section>
         <h2>About the License</h2>
         <p>Mozilla is the custodian of the <a href="{{ url('mozorg.mpl.2.0.index') }}">Mozilla Public License</a> ("MPL"), an <a href="http://www.opensource.org/licenses/MPL-2.0">open source</a>/<a href="http://www.gnu.org/licenses/license-list.html#MPL-2.0">free software</a> license.</p>
-        <p>The current version of the license is MPL 2.0 (<a href="{{ url('mozorg.mpl.2.0.index') }}">html</a> | <a href="index.txt">plain text</a>). If you want to use or distribute code licensed under the MPL 2.0 and have questions about it, you may want to read the <a href="{{ url('mozorg.mpl.2.0.faq') }}">FAQ</a>.</p>
+        <p>The current version of the license is MPL 2.0 (<a href="{{ url('mozorg.mpl.2.0.index') }}">html</a> | <a href="{{ static('MPL/1.1/index.txt') }}">plain text</a>). If you want to use or distribute code licensed under the MPL 2.0 and have questions about it, you may want to read the <a href="{{ url('mozorg.mpl.2.0.faq') }}">FAQ</a>.</p>
         <h3>MPL 2.0 Revision Process</h3>
         <p>The release of MPL 2.0 was the result of a two year process that revised <a href="{{ url('mozorg.mpl.1.1.index') }}">MPL 1.1</a>. A <a href="{{ url('mozorg.mpl.2.0.revision-faq') }}">Revision FAQ</a> documents this process, and explains the most significant changes made.</a></p>
         <h3>Historical Documents</h3>
