Bug 1199622 Update partner requirement PDF links

--- a/bedrock/mozorg/templates/mozorg/contentservices/faq.html
+++ b/bedrock/mozorg/templates/mozorg/contentservices/faq.html
@@ -152,8 +152,8 @@
     <h3 data-accordion-role="tab">{{ _('What are the technical requirements?') }}</h3>
     <div data-accordion-role="tabpanel">
       <p>
-        {% trans url='http://static.mozilla.com/moco/en-US/pdf/Partner_Specs_Directory_Tiles.pdf', url2='http://static.mozilla.com/moco/en-US/pdf/Partner_Specs_Suggested_Tiles.pdf' %}
-          Please see our our creative guidelines for <a href="{{ url }}">Directory Tiles</a> or <a href="{{ url2 }}">Suggested Tiles</a> for guidance on how to create Tile assets.
+        {% trans url='http://static.mozilla.com/moco/en-US/pdf/Creative_Specs_for_Directory_Suggested_Tiles.pdf' %}
+          Please see our creative guidelines for <a href="{{ url }}">Directory Tiles and Suggested Tiles</a> for guidance on how to create Tile assets.
         {% endtrans %}
         {{ _('We recommend a custom URL destination for Tile traffic, to more easily measure campaign performance.') }}
       </p>
